update some text in string file.

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -295,13 +295,13 @@
     <string name="RS58">3.01: کیا پچھلے 06 مہینوں میں کسی بھی وقت سینے میں گھرگھراہٹ (سینے سے سیٹی کی آواز)آئی ہے؟ </string>
     <string name="RS59">3.02: پچھلے 06 مہینوں میں گھرگھراہٹ (سینے سے سیٹی کی آواز) کے کتنے واقعات ہوئے ہیں؟ </string>
     <string name="RS60">3.03: پچھلے 06 مہینوں میں ، گھرگھراہٹ (سینے سے سیٹی کی آواز) کی وجہ سے کتنی بار نیند خراب ہوئی ہے </string>
-    <string name="RS60a"> ہفتہ ایک رات سے کم </string>
-    <string name="RS60b"> ہفتہ ایک یا زیادہ راتیں </string>
+    <string name="RS60a"> فی ہفتہ ایک رات سے کم </string>
+    <string name="RS60b"> فی ہفتہ ایک یا زیادہ راتیں </string>
     <string name="RS61">3.04: پچھلے 06 مہینوں میں ، رات میں کھانسی کی وجہ سے کتنی بار نیند میں خلل پڑا ہے ، جب آپ کا بچہ ٹھیک ظاہر ہوتا ہے (یعنی کوئی زُکام یا سینے میں انفکشن نہیں ہوتا ہے) </string>
-    <string name="RS61a"> ہفتہ ایک رات سے کم </string>
-    <string name="RS61b"> ہفتہ ایک یا زیادہ راتیں </string>
+    <string name="RS61a"> فی ہفتہ ایک رات سے کم </string>
+    <string name="RS61b"> فی ہفتہ ایک یا زیادہ راتیں </string>
     <string name="RS62">3.05: پچھلے 06 مہینوں میں ، گھرگھراھٹ کبھی اتنی شدید ہوئی کہ بولنے یا رونے کی آواز کو محدود کردے؟ </string>
-    <string name="RS63">3.06: کیا کبھی بچے کو دمہ کی تشخیص ہوئی ہے؟ </string>
+    <string name="RS63">3.06: کیا پچھلے 6 ماہ میں بچے کو دمہ کی تشخیص ہوئی ہے؟ </string>
     <string name="RS64">3.07: دمہ کی تشخیص کس نے کی؟ </string>
     <string name="RS64a"> ڈاکٹر </string>
     <string name="RS64b"> پیرا میڈیک </string>
@@ -309,7 +309,7 @@
     <string name="RS6496"> کوئی اور </string>
     <string name="RS65">3.08: پچھلے 06 مہینوں میں ، کیا آپ کے بچے کو ورزش کے دوران یا اس کے بعد خشک کھانسی ہوئی ہے (سینے سے سیٹی کی آواز) آئی ہے؟ </string>
     <string name="RS66">3.09: پچھلے 06 مہینوں میں ، کیا اس سردی یا سینے میں انفیکشن سے وابستہ کھانسی کے علاوہ بھی ، بچے کو رات کو خشک کھانسی ہوئی ہے؟ </string>
-    <string name="RS67"> 3.10 دمہ یا سانس لینے میں دشواریوں کے سبب آپ کے بچے نے آخری بار ہیلتھ کیر سنٹر کا دورہ کب کیا تھا؟</string>
+    <string name="RS67"> 3.10 پچھلے چھ ماہ میں ، آپ کے بچے نے دمہ اور سانس لینے میں دشواریوں کے سبب کتنی بار صحت کی سہولیات کا دورہ کیا؟</string>
     <string name="RS67a">طبی دورے کی تعداد </string>
     <string name="RS68">3.11 دمہ یا سانس لینے میں دشواریوں کے سبب آپ کے بچے نے آخری بار ہیلتھ کیر سنٹر کا دورہ کب کیا تھا؟ </string>
     <string name="RS69">3.12 کیا علامات کو کنٹرول کرنے کے لئے
@@ -373,7 +373,7 @@
     <string name="RS8012"> کچھ اور </string>
 
     <string name="Section92"> 2 پیش قدمی عوامل </string>
-    <string name="RS81">6.02: کیا آپ کے بچے کو کسی غذا سے الرجی ہے؟ </string>
+    <string name="RS81">6.02: کیا پچھلے 6 مہینوں میں آپ کے بچے کو کسی غذا سے الرجی ہوئی ہے؟ </string>
     <string name="RS82">6.03: آپ کے بچے کو کون سی غذا سے الرجی ہے؟ </string>
     <string name="RS83">6:04 کیا آپ کے بچے کو پچھلے چھ مہینوں میں ایکزیما ہوا ہے ؟ ( جلد پر سُرخ داغ اور خارش ) </string>
     <string name="RS84">6:05 ایکزیما کس جگہ ہوا تھا؟</string>
