modify section 05 according the tool 2-A.

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -399,6 +399,8 @@
     <string name="RS86g">پھیپھڑوں کا ورم</string>
     <string name="RS86h">دمہ</string>
 
+    <string name="RS87">جواب دینے والے  شخص  کا بچے سے کیا رشتہ ہے؟</string>
+
 
     <!-- FORM 2 - B-->
     <string name="SectionT2"> 2. General Information </string>
