--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -311,6 +311,7 @@
     <string name="RS66">3.09: پچھلے 06 مہینوں میں ، کیا اس سردی یا سینے میں انفیکشن سے وابستہ کھانسی کے علاوہ بھی ، بچے کو رات کو خشک کھانسی ہوئی ہے؟ </string>
     <string name="RS67"> 3.10 پچھلے چھ ماہ میں ، آپ کے بچے نے دمہ اور سانس لینے میں دشواریوں کے سبب کتنی بار صحت کی سہولیات کا دورہ کیا؟</string>
     <string name="RS67a">طبی دورے کی تعداد </string>
+    <string name="RS6777">دورہ نہیں کیا </string>
     <string name="RS68">3.11 دمہ یا سانس لینے میں دشواریوں کے سبب آپ کے بچے نے آخری بار ہیلتھ کیر سنٹر کا دورہ کب کیا تھا؟ </string>
     <string name="RS69">3.12 کیا علامات کو کنٹرول کرنے کے لئے
 کسی دوا کا استعمال کیا ہے؟</string>
