--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -402,6 +402,14 @@
 
     <string name="RS87">جواب دینے والے  شخص  کا بچے سے کیا رشتہ ہے؟</string>
 
+    <string name="RS88">کیا گھر اور بچے کی شناخت ہوگئی ہے؟</string>
+    <string name="RS88a">ہاں گھر اور بچے کی شناخت ہوگی ہے</string>
+    <string name="RS88b">نہیں گھر پر کوئی موجود نہیں ہے</string>
+    <string name="RS88c">گھر پر تالا لگا ہوا ہے</string>
+    <string name="RS88d">گھر  تبدیل کر لیا گیا ہے</string>
+    <string name="RS88e">ڈی ایس ایس آئیڈی درست نہیں ہے</string>
+    <string name="RS8896">وضاحت کریں</string>
+
 
     <!-- FORM 2 - B-->
     <string name="SectionT2"> 2. General Information </string>
