added one more option as stated by Khalid shb

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -399,6 +399,7 @@
     <string name="RS86f">نیومونیہ</string>
     <string name="RS86g">پھیپھڑوں کا ورم</string>
     <string name="RS86h">دمہ</string>
+    <string name="RS86i">تشخیص سے متعلق کارڈ پر کوئی معلومات نہیں</string>
 
     <string name="RS87">جواب دینے والے  شخص  کا بچے سے کیا رشتہ ہے؟</string>
 
