activity_form2b_pretest.xml weight raised to 90 Requested@AmirHamza

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -273,7 +273,8 @@
 
     <string name="Section5"> ایٹوپک ڈرمیٹائٹس کے لئے اسکریننگ </string>
     <string name="RS49">5.01: کیا کبھی بھی بچے کو خارش کے ساتھ جلد پر سُرخ داغ یا دانے ہوئے  تھے جو کم سے کم 12 ماہ تک آتے جاتے رہے ؟ </string>
-    <string name="RS50">  2.01 کیا پچھلے 6مہینے کے دوران بچے کو خارش کے ساتھ جلد پر سُرخ داغ یا دانے ہوئے ہیں؟ </string>
+    <!--<string name="RS50">  2.01 کیا پچھلے 6مہینے کے دوران بچے کو خارش کے ساتھ جلد پر سُرخ داغ یا دانے ہوئے ہیں؟ </string>-->
+    <string name="RS50"> کیا پچھلے چھ مہینے کے دوران بچے کو خارش کے ساتھ جلد پر سُرخ داغ یا دانے ہوئے ہیں ؟ </string>
     <string name="RS51">2.02 کیا یہ جلد پر خارش کے ساتھ سُرخ داغ یا دانے سے جسم کے یہ حصے متاثرہوئے تھے: کہنیوں کے تہہ ، گھٹنوں کے پیچھے ، ٹخنوں کے سامنے ، کولہوں کے نیچے ، یا گردن ، کان یا آنکھوں کے گرد؟  </string>
     <string name="RS52">5.04: پہلی مرتبہ کس عمر میں یہ خارش کے ساتھ سُرخ داغ یا دانے ہوئے تھے؟  </string>
     <string name="RS53">2.03 کیا پچھلے 6 مہینے کے دوران یہ خارش
